--- a/.github/workflows/cflite_push.yml
+++ b/.github/workflows/cflite_push.yml
@@ -2,7 +2,7 @@ name: Push Fuzzing
 on:
   push:
     branches:
-      - main  # Use your actual default branch here.
+      - master  # Use your actual default branch here.
 permissions: read-all
 jobs:
   PushFuzzing:
