--- a/.github/workflows/cflite_batch.yml
+++ b/.github/workflows/cflite_batch.yml
@@ -2,7 +2,7 @@ name: ClusterFuzzLite batch fuzzing
 on:
   push:
     branches:
-      - main  # Use your actual default branch here.
+      - master  # Use your actual default branch here.
 permissions: read-all
 jobs:
   BatchFuzzing:
